test/testData/parser/negative/statements/break.err
test/testData/parser/negative/statements/break.c:5:3: error: 'break' statement not in loop or switch statement
test/testData/parser/negative/statements/break.c:11:3: error: 'break' statement not in loop or switch statement
test/testData/parser/negative/statements/break.c:16:3: error: 'break' statement not in loop or switch statement
test/testData/parser/negative/statements/break.c:22:3: error: 'break' statement not in loop or switch statement
test/testData/parser/negative/statements/break.c:26:3: error: 'break' statement not in loop or switch statement
test/testData/parser/negative/statements/break.c:34:3: error: 'break' statement not in loop or switch statement
test/testData/parser/negative/statements/break.c:38:3: error: 'break' statement not in loop or switch statement
test/testData/parser/negative/statements/break.c:56:3: error: 'break' statement not in loop or switch statement
